# distrobox-plus

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
src/distrobox_boost/: __init__.py  __main__.py
src/distrobox_boost/command/: __init__.py  assemble.py  create.py  image.py  passthrough.py  profile.py  wrapper.py
src/distrobox_boost/utils/: builder.py  config.py  hijack.py  parsing.py  templates.py  utils.py
src/distrobox_plus/: __init__.py  __main__.py  cli.py  config.py  console.py  container.py  log.py  utils.py
src/distrobox_plus/commands/: __init__.py  assemble.py  build.py  create.py  enter.py  ephemeral.py  export.py  generate_entry.py  list.py  rm.py  stop.py  upgrade.py
src/distrobox_plus/scripts/: __init__.py
src/distrobox_plus/utils/: __init__.py  builder.py  console.py  exceptions.py  helpers.py  log.py  templates.py
src/distrobox_scripts/: distrobox-export.sh  distrobox-host-exec.sh  distrobox-init.sh
tests/: __init__.py  conftest.py  test_assemble_command.py  test_cli.py  test_config.py  test_create_command.py  test_hijack.py  test_image.py  test_integration.py  test_profile.py  test_templates.py  test_utils.py
tests/helpers/: __init__.py  assertions.py
tests/integration/: __init__.py  conftest.py  test_assemble.py  test_build.py  test_create.py  test_enter.py  test_ephemeral.py  test_export.py  test_generate_entry.py  test_list.py  test_rm.py  test_stop.py  test_upgrade.py  test_workflow.py
tests/unit/: __init__.py  test_builder.py  test_parse_image_list.py  test_templates.py
