[project]
name = "distrobox-plus"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xz-dev", email = "xiangzhedev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.0.0",
]

[project.scripts]
distrobox-plus = "distrobox_plus:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: marks tests as fast (< 5 seconds, no container creation)",
    "slow: marks tests as slow (> 30 seconds, full container lifecycle)",
    "integration: marks tests as requiring real container operations",
    "create: tests for distrobox-create command",
    "enter: tests for distrobox-enter command",
    "ephemeral: tests for distrobox-ephemeral command",
    "list: tests for distrobox-list command",
    "stop: tests for distrobox-stop command",
    "rm: tests for distrobox-rm command",
]
# Skip slow tests by default
addopts = "-m 'not slow'"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
