[project]
name = "distrobox-plus"
version = "1.8.2.3"
description = "A Python implementation of distrobox for creating and managing containerized development environments"
authors = [
    { name = "xz-dev", email = "xiangzhedev@gmail.com" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["distrobox", "container", "podman", "docker", "development", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Containers",
]
dependencies = [
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/xz-dev/distrobox-plus"
Repository = "https://github.com/xz-dev/distrobox-plus"
Issues = "https://github.com/xz-dev/distrobox-plus/issues"

[project.scripts]
distrobox-plus = "distrobox_plus:main"
distrobox-generate-entry = "distrobox_plus.commands.generate_entry:run"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: marks tests as fast (< 5 seconds, no container creation)",
    "slow: marks tests as slow (> 30 seconds, full container lifecycle)",
    "integration: marks tests as requiring real container operations",
    "assemble: tests for distrobox-assemble command",
    "create: tests for distrobox-create command",
    "enter: tests for distrobox-enter command",
    "ephemeral: tests for distrobox-ephemeral command",
    "export: tests for distrobox-export command",
    "generate_entry: tests for distrobox-generate-entry command",
    "list: tests for distrobox-list command",
    "stop: tests for distrobox-stop command",
    "rm: tests for distrobox-rm command",
    "upgrade: tests for distrobox-upgrade command",
]
# Skip slow tests by default
addopts = "-m 'not slow'"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
